# Samoyeds-Kernel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  build.sh  run.sh
benchmark/: CMakeLists.txt  benchmark.cpp  format_check.cpp  horizontal_spmm_kernel_benchmark.cpp  horizontal_ssmm_kernel_benchmark.cpp
benchmark/format/: CMakeLists.txt  format.cpp  format.hpp  format_ss.cpp  format_ss.hpp  format_venom.cpp  format_venom.hpp  formats.hpp
benchmark/gemm/: CMakeLists.txt  cublasLt_gemm.cpp  cublasLt_gemm.h  cublas_gemm.cpp  cublas_gemm.h
benchmark/methods/: cublasLt_timer.h  cublas_timer.h  ssmm_timer.h
benchmark/mm_utils/: CMakeLists.txt  memcpy_pipeline.h  memcpy_util.h  spmm_utils.h
benchmark/ssmm/: CMakeLists.txt  copy_helper.h  data_structure_helper.h  horizontal_spmm_kernel.h  horizontal_spmm_kernel_op.h  horizontal_ssmm_kernel.h  horizontal_ssmm_kernel_op.h  mma_helper.h
benchmark/util/: CMakeLists.txt  argparse.hpp  matrix_utils.h  print_helper.hpp  result_check.h  utils.h
cmake_helper/: cuda.cmake
